Dna.LLVMInterop/API/LLVM/Transforms/Scalar.h

//===----------------------------------------------------------------------===//
//
// LoopRotate - This pass is a simple loop rotating pass.
//
DNA_EXPORT Pass* CreateLoopRotatePass(int MaxHeaderSize, bool PrepareForLTO)
{
    return createLoopRotatePass(MaxHeaderSize, PrepareForLTO);
}
//===----------------------------------------------------------------------===//
//
// LoopIdiom - This pass recognizes and replaces idioms in loops.
//
DNA_EXPORT Pass* CreateLoopIdiomPass()
{
    return createLoopIdiomPass();
}
//===----------------------------------------------------------------------===//
//
// DemoteRegisterToMemoryPass - This pass is used to demote registers to memory
// references. In basically undoes the PromoteMemoryToRegister pass to make cfg
// hacking easier.
//
DNA_EXPORT FunctionPass* CreateDemoteRegisterToMemoryPass()
{
    return createDemoteRegisterToMemoryPass();
}
//===----------------------------------------------------------------------===//
//
// Reassociate - This pass reassociates commutative expressions in an order that
// is designed to promote better constant propagation, GCSE, LICM, PRE...
//
// For example:  4 + (x + 5)  ->  x + (4 + 5)
//
DNA_EXPORT FunctionPass* CreateReassociatePass()
{
    return createReassociatePass();
}
//===----------------------------------------------------------------------===//
//
// JumpThreading - Thread control through mult-pred/multi-succ blocks where some
// preds always go to some succ. Thresholds other than minus one
// override the internal BB duplication default threshold.
//
DNA_EXPORT FunctionPass* CreateJumpThreadingPass(int Threshold)
{
    return createJumpThreadingPass(Threshold);
}
//===----------------------------------------------------------------------===//
//
// DFAJumpThreading - When a switch statement inside a loop is used to
// implement a deterministic finite automata we can jump thread the switch
// statement reducing number of conditional jumps.
//
DNA_EXPORT FunctionPass* CreateDFAJumpThreadingPass()
{
    return createDFAJumpThreadingPass();
}
//===----------------------------------------------------------------------===//
//
// CFGSimplification - Merge basic blocks, eliminate unreachable blocks,// simplify terminator instructions, convert switches to lookup tables, etc.
//
DNA_EXPORT FunctionPass* CreateCFGSimplificationPass(SimplifyCFGOptions Options)
{
    return createCFGSimplificationPass(Options);
}
//===----------------------------------------------------------------------===//
//
// FlattenCFG - flatten CFG, reduce number of conditional branches by using
// parallel-and and parallel-or mode, etc...
//
DNA_EXPORT FunctionPass* CreateFlattenCFGPass()
{
    return createFlattenCFGPass();
}
//===----------------------------------------------------------------------===//
//
// CFG Structurization - Remove irreducible control flow
//
///
/// When \p SkipUniformRegions is true the structizer will not structurize
/// regions that only contain uniform branches.
DNA_EXPORT Pass* CreateStructurizeCFGPass(bool SkipUniformRegions)
{
    return createStructurizeCFGPass(SkipUniformRegions);
}
//===----------------------------------------------------------------------===//
//
// TailCallElimination - This pass eliminates call instructions to the current
// function which occur immediately before return instructions.
//
DNA_EXPORT FunctionPass* CreateTailCallEliminationPass()
{
    return createTailCallEliminationPass();
}
//===----------------------------------------------------------------------===//
//
// EarlyCSE - This pass performs a simple and fast CSE pass over the dominator
// tree.
//
DNA_EXPORT FunctionPass* CreateEarlyCSEPass(bool UseMemorySSA)
{
    return createEarlyCSEPass(UseMemorySSA);
}
//===----------------------------------------------------------------------===//
//
// GVNHoist - This pass performs a simple and fast GVN pass over the dominator
// tree to hoist common expressions from sibling branches.
//
DNA_EXPORT FunctionPass* CreateGVNHoistPass()
{
    return createGVNHoistPass();
}
//===----------------------------------------------------------------------===//
//
// GVNSink - This pass uses an "inverted" value numbering to decide the
// similarity of expressions and sinks similar expressions into successors.
//
DNA_EXPORT FunctionPass* CreateGVNSinkPass()
{
    return createGVNSinkPass();
}
//===----------------------------------------------------------------------===//
//
// MergedLoadStoreMotion - This pass merges loads and stores in diamonds. Loads
// are hoisted into the header, while stores sink into the footer.
//
DNA_EXPORT FunctionPass* CreateMergedLoadStoreMotionPass(bool SplitFooterBB)
{
    return createMergedLoadStoreMotionPass(SplitFooterBB);
}
//===----------------------------------------------------------------------===//
//
// GVN - This pass performs global value numbering and redundant load
// elimination cotemporaneously.
//
DNA_EXPORT FunctionPass* CreateNewGVNPass()
{
    return createNewGVNPass();
}
//===----------------------------------------------------------------------===//
//
// DivRemPairs - Hoist/decompose integer division and remainder instructions.
//
DNA_EXPORT FunctionPass* CreateDivRemPairsPass()
{
    return createDivRemPairsPass();
}
//===----------------------------------------------------------------------===//
//
// MemCpyOpt - This pass performs optimizations related to eliminating memcpy
// calls and/or combining multiple stores into memset's.
//
DNA_EXPORT FunctionPass* CreateMemCpyOptPass()
{
    return createMemCpyOptPass();
}
//===----------------------------------------------------------------------===//
//
// LoopDeletion - This pass performs DCE of non-infinite loops that it
// can prove are dead.
//
DNA_EXPORT Pass* CreateLoopDeletionPass()
{
    return createLoopDeletionPass();
}
//===----------------------------------------------------------------------===//
//
// ConstantHoisting - This pass prepares a function for expensive constants.
//
DNA_EXPORT FunctionPass* CreateConstantHoistingPass()
{
    return createConstantHoistingPass();
}
//===----------------------------------------------------------------------===//
//
// ConstraintElimination - This pass eliminates conditions based on found
//                         constraints.
//
DNA_EXPORT FunctionPass* CreateConstraintEliminationPass()
{
    return createConstraintEliminationPass();
}
//===----------------------------------------------------------------------===//
//
// Sink - Code Sinking
//
DNA_EXPORT FunctionPass* CreateSinkingPass()
{
    return createSinkingPass();
}
//===----------------------------------------------------------------------===//
//
// LowerAtomic - Lower atomic intrinsics to non-atomic form
//
DNA_EXPORT Pass* CreateLowerAtomicPass()
{
    return createLowerAtomicPass();
}
//===----------------------------------------------------------------------===//
//
// LowerGuardIntrinsic - Lower guard intrinsics to normal control flow.
//
DNA_EXPORT Pass* CreateLowerGuardIntrinsicPass()
{
    return createLowerGuardIntrinsicPass();
}
//===----------------------------------------------------------------------===//
//
// LowerMatrixIntrinsics - Lower matrix intrinsics to vector operations.
//
DNA_EXPORT Pass* CreateLowerMatrixIntrinsicsPass()
{
    return createLowerMatrixIntrinsicsPass();
}
//===----------------------------------------------------------------------===//
//
// LowerMatrixIntrinsicsMinimal - Lower matrix intrinsics to vector operations
//                               (lightweight, does not require extra analysis)
//
DNA_EXPORT Pass* CreateLowerMatrixIntrinsicsMinimalPass()
{
    return createLowerMatrixIntrinsicsMinimalPass();
}