Dna/LLVMInterop/API/LLVMBindings/Transforms/NativeScalarApi.cs


        //===----------------------------------------------------------------------===//
        //
        // LoopRotate - This pass is a simple loop rotating pass.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopRotatePass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopRotatePass(int MaxHeaderSize, bool PrepareForLTO);

        //===----------------------------------------------------------------------===//
        //
        // LoopIdiom - This pass recognizes and replaces idioms in loops.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopIdiomPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopIdiomPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopVersioningLICM - This pass is a loop versioning pass for LICM.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopVersioningLICMPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopVersioningLICMPass();

        //===----------------------------------------------------------------------===//
        //
        // DemoteRegisterToMemoryPass - This pass is used to demote registers to memory
        // references. In basically undoes the PromoteMemoryToRegister pass to make cfg
        // hacking easier.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateDemoteRegisterToMemoryPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateDemoteRegisterToMemoryPass();

	//===----------------------------------------------------------------------===//
	//
	// Reassociate - This pass reassociates commutative expressions in an order that
	// is designed to promote better constant propagation, GCSE, LICM, PRE...
	//
	// For example:  4 + (x + 5)  ->  x + (4 + 5)
	//
	[DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateReassociatePass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateReassociatePass();

        //===----------------------------------------------------------------------===//
        //
        // JumpThreading - Thread control through mult-pred/multi-succ blocks where some
        // preds always go to some succ. Thresholds other than minus one
        // override the internal BB duplication default threshold.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateJumpThreadingPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateJumpThreadingPass(int Threshold);

        //===----------------------------------------------------------------------===//
        //
        // DFAJumpThreading - When a switch statement inside a loop is used to
        // implement a deterministic finite automata we can jump thread the switch
        // statement reducing number of conditional jumps.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateDFAJumpThreadingPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateDFAJumpThreadingPass();

        //===----------------------------------------------------------------------===//
        //
        // CFGSimplification - Merge basic blocks, eliminate unreachable blocks,// simplify terminator instructions, convert switches to lookup tables, etc.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateCFGSimplificationPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateCFGSimplificationPass();

        //===----------------------------------------------------------------------===//
        //
        // FlattenCFG - flatten CFG, reduce number of conditional branches by using
        // parallel-and and parallel-or mode, etc...
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateFlattenCFGPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateFlattenCFGPass();

        //===----------------------------------------------------------------------===//
        //
        // CFG Structurization - Remove irreducible control flow
        //
        ///
        /// When \p SkipUniformRegions is true the structizer will not structurize
        /// regions that only contain uniform branches.
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateStructurizeCFGPass")]
        public unsafe static extern LLVMOpaquePass* CreateStructurizeCFGPass(bool SkipUniformRegions);

        //===----------------------------------------------------------------------===//
        //
        // TailCallElimination - This pass eliminates call instructions to the current
        // function which occur immediately before return instructions.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateTailCallEliminationPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateTailCallEliminationPass();

        //===----------------------------------------------------------------------===//
        //
        // EarlyCSE - This pass performs a simple and fast CSE pass over the dominator
        // tree.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateEarlyCSEPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateEarlyCSEPass(bool UseMemorySSA);

        //===----------------------------------------------------------------------===//
        //
        // GVNHoist - This pass performs a simple and fast GVN pass over the dominator
        // tree to hoist common expressions from sibling branches.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateGVNHoistPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateGVNHoistPass();

        //===----------------------------------------------------------------------===//
        //
        // GVNSink - This pass uses an "inverted" value numbering to decide the
        // similarity of expressions and sinks similar expressions into successors.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateGVNSinkPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateGVNSinkPass();

        //===----------------------------------------------------------------------===//
        //
        // MergedLoadStoreMotion - This pass merges loads and stores in diamonds. Loads
        // are hoisted into the header, while stores sink into the footer.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateMergedLoadStoreMotionPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateMergedLoadStoreMotionPass(bool SplitFooterBB);

        //===----------------------------------------------------------------------===//
        //
        // GVN - This pass performs global value numbering and redundant load
        // elimination cotemporaneously.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateNewGVNPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateNewGVNPass();

        //===----------------------------------------------------------------------===//
        //
        // DivRemPairs - Hoist/decompose integer division and remainder instructions.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateDivRemPairsPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateDivRemPairsPass();

        //===----------------------------------------------------------------------===//
        //
        // MemCpyOpt - This pass performs optimizations related to eliminating memcpy
        // calls and/or combining multiple stores into memset's.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateMemCpyOptPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateMemCpyOptPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopDeletion - This pass performs DCE of non-infinite loops that it
        // can prove are dead.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopDeletionPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopDeletionPass();

        //===----------------------------------------------------------------------===//
        //
        // ConstantHoisting - This pass prepares a function for expensive constants.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateConstantHoistingPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateConstantHoistingPass();

        //===----------------------------------------------------------------------===//
        //
        // ConstraintElimination - This pass eliminates conditions based on found
        //                         constraints.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateConstraintEliminationPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateConstraintEliminationPass();

        //===----------------------------------------------------------------------===//
        //
        // Sink - Code Sinking
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateSinkingPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateSinkingPass();

        //===----------------------------------------------------------------------===//
        //
        // LowerAtomic - Lower atomic intrinsics to non-atomic form
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLowerAtomicPass")]
        public unsafe static extern LLVMOpaquePass* CreateLowerAtomicPass();

        //===----------------------------------------------------------------------===//
        //
        // LowerGuardIntrinsic - Lower guard intrinsics to normal control flow.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLowerGuardIntrinsicPass")]
        public unsafe static extern LLVMOpaquePass* CreateLowerGuardIntrinsicPass();

        //===----------------------------------------------------------------------===//
        //
        // LowerMatrixIntrinsics - Lower matrix intrinsics to vector operations.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLowerMatrixIntrinsicsPass")]
        public unsafe static extern LLVMOpaquePass* CreateLowerMatrixIntrinsicsPass();

        //===----------------------------------------------------------------------===//
        //
        // LowerMatrixIntrinsicsMinimal - Lower matrix intrinsics to vector operations
        //                               (lightweight, does not require extra analysis)
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLowerMatrixIntrinsicsMinimalPass")]
        public unsafe static extern LLVMOpaquePass* CreateLowerMatrixIntrinsicsMinimalPass();
